WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
240541
[libpas] Suppress warnings for %llu format specifier for uint64_t.
https://bugs.webkit.org/show_bug.cgi?id=240541
Summary
[libpas] Suppress warnings for %llu format specifier for uint64_t.
Basuke Suzuki
Reported
2022-05-17 14:44:15 PDT
Use PRIu64 instead.
Attachments
Add attachment
proposed patch, testcase, etc.
EWS
Comment 1
2022-05-17 16:55:19 PDT
Committed
r294364
(
250667@main
): <
https://commits.webkit.org/250667@main
> Reviewed commits have been landed. Closing PR #696 and removing active labels.
Radar WebKit Bug Importer
Comment 2
2022-05-17 16:56:13 PDT
<
rdar://problem/93463044
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug