[libpas] Suppress warnings for %llu format specifier for uint64_t. https://bugs.webkit.org/show_bug.cgi?id=240541

Reviewed by Yusuke Suzuki.

Use PRIu64 instead.

* libpas/src/libpas/pas_utils.c:
(pas_assertion_failed_no_inline_with_extra_detail):

Canonical link: https://commits.webkit.org/250667@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@294364 268f45cc-cd09-0410-ab3c-d52691b4dbfc